Added unsigned types support + rewritten Java runtime to Kotlin